# esp8266

./: .gitignore
project/: CMakeLists.txt  delete_build.sh
project/app/: CMakeLists.txt  main.c
project/app/inc/: appEsp8266.h  appGpio.h  appUart.h  config.h
project/app/src/: appEsp8266.c  appGpio.c  appUart.c
project/unit_test/: CMakeLists.txt  TEST_ESP8266.cpp  main.cpp
project/unit_test/mock/: esp8266_mock.cpp  esp8266_mock.hpp  mock_uart_class.h
